# agent-net-sandbox

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  FRONTEND_SETUP.md  LICENSE  LLM_ENDPOINT_BUG_REPRODUCTION.md  MANUAL_SETUP.md  MANUAL_TESTING.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
agents/a2a-math-agent/: .env.example  Dockerfile  README.md  docker_entrypoint.py  pyproject.toml  requirements.txt  test_server.py  test_server_llm.py
agents/a2a-math-agent/scripts/: test_agent.py  test_llm_integration.py
agents/a2a-math-agent/src/: __init__.py
agents/a2a-math-agent/src/a2a_math_agent/: __init__.py  llm_service.py  math_agent.py
agents/a2a-math-agent/tests/: test_fallback_logic.py  test_llm_service.py  test_math_agent.py  test_math_operations.py
agents/acp-hello-world/: Dockerfile  PROJECT_SUMMARY.md  README.md  acp-descriptor.json  agent-manifest.yaml  pyproject.toml  requirements.txt
agents/acp-hello-world/src/hello_agent/: __init__.py  agent.py  app.py  cli.py  models.py  simple_cli.py
agents/orchestrator/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
agents/orchestrator/scripts/: build.sh  deploy.sh  dev.sh  start.sh
agents/orchestrator/src/orchestrator/: __init__.py  agent.py  api.py  config.py  discovery.py  main.py  models.py
agents/orchestrator/src/orchestrator/protocols/: __init__.py  a2a_client.py  a2a_discovery.py  acp_discovery.py  base.py  mcp_discovery.py
agents/orchestrator/tests/: __init__.py  conftest.py  test_a2a_client.py  test_agent.py  test_api.py  test_config.py  test_discovery.py  test_discovery_enhanced.py  test_discovery_service.py  test_models.py  test_orchestrator_agent.py
agents/orchestrator/tests/fixtures/: __init__.py  docker_fixtures.py
agents/orchestrator/tests/test_protocols/: __init__.py  test_a2a_discovery.py  test_acp_discovery.py
docs/: LLM_ENDPOINT_CONSECUTIVE_TESTS_RESULTS.md  implementation-strategy.md  orchestrator-discovery-strategy.md  orchestrator-implementation-plan.md  technology-stack-plan.md
docs/tutorials/: README.md
docs/tutorials/a2a/: 01-understanding-a2a.md  02-configuration-discovery.md  03-building-first-agent.md  04-advanced-features.md
docs/tutorials/acp/: 01-understanding-acp.md  02-configuration-discovery.md  03-building-first-agent.md  04-advanced-features.md  05-enterprise-architecture.md  README.md
docs/tutorials/acp/examples/: config-examples.yaml  minimal-agent.py  test-commands.sh
docs/tutorials/frontend/: 04-styling-with-tailwind.md  08-troubleshooting.md  README.md
docs/tutorials/frontend/advanced-features/: 01-retry-mechanisms.md  02-message-actions-system.md  03-ai-routing-transparency.md  03-troubleshooting-streaming-api.md  04-message-persistence-system.md  05-conversation-threading.md  06-advanced-search-and-filtering.md
docs/tutorials/frontend/architecture/: 01-component-architecture.md  02-state-management-patterns.md  03-component-composition-patterns.md  03-error-boundary-strategies.md  04-performance-optimization-patterns.md  04-performance-optimization-strategies.md  05-testing-strategies.md  06-deployment-and-monitoring.md  06-deployment-patterns.md
docs/tutorials/frontend/deployment/: 01-production-setup.md  02-performance-optimization.md  03-monitoring-and-analytics.md
docs/tutorials/frontend/examples/: 01-streaming-chat-container.md  02-message-component-analysis.md  03-chat-interface-walkthrough.md  03-routing-reasoning-component.md  04-hooks-implementation-guide.md  05-api-service-patterns.md
docs/tutorials/frontend/phase-1-basics/: 01-introduction.md  02-project-setup.md  03-understanding-components.md  05-typescript-basics.md  06-state-management.md  07-building-chat-ui.md
docs/tutorials/frontend/phase-2-api-integration/: 01-orchestrator-api-basics.md  02-service-layer-architecture.md  03-hooks-for-api-state.md  04-protocol-aware-parsing.md  05-error-handling-strategies.md  06-health-monitoring.md
docs/tutorials/frontend/phase-3-streaming/: 01-understanding-sse.md  02-streaming-api-service.md  03-streaming-state-management.md  04-real-time-chunk-rendering.md  05-phase-tracking-indicators.md  06-error-recovery-mechanisms.md  07-streaming-optimization-techniques.md
docs/tutorials/frontend/protocols/01-protocol-fundamentals/: 01-a2a-protocol-parsing.md  02-acp-protocol-parsing.md
docs/tutorials/frontend/protocols/02-production-integration/: 01-a2a-response-handling.md  02-acp-response-handling.md
docs/tutorials/frontend/troubleshooting/: 01-common-streaming-issues.md  02-api-integration-debugging.md  03-production-deployment-issues.md
docs/tutorials/orchestrator/: 01-discovery-flow.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  issue_update.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatContainer.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx  RoutingReasoning.tsx  StreamingChatContainer.tsx
frontend/src/hooks/: useOrchestrator.ts  useStreamingOrchestrator.ts
frontend/src/services/: orchestratorApi.ts  streamingApi.ts
frontend/src/types/: agent.ts  chat.ts
scripts/: agent-directory.html  create_agent.sh  example_requests.md  nginx.conf  test_all_agents.sh
scripts/agents/: test_acp.sh
templates/agent-template/: Dockerfile  README.md  requirements.txt  test.sh
templates/agent-template/src/: app.py
